<resources>
    <string name="app_name">Medication Reminder</string>
    <string name="action_settings">Settings</string>
    <string name="action_patientselect">Patient Select</string>
    <string name="action_patientadd">Add New Patient</string>
    <string name="action_medication">Meds</string>
    <string name="action_agenda">Medicine Agenda</string>
    <string name="action_log">Medicine Log</string>
    <string name="action_Notes">Doctor Notes</string>
    <string name="action_plus">Add Medication</string>
    <string name="action_schedule">Set Schedule</string>
    <string name="action_edit">Edit Medication</string>

    <!-- Strings for Settings -->

    <string-array name="entries_reminderType">
        <item>Alert</item>
        <item>Notification</item>
        <item>Toast</item>
        <item>None</item>
    </string-array>

    <string-array name="entryvalues_reminderType">
        <item>Alert</item>
        <item>Notification</item>
        <item>Toast</item>
        <item>Don't Remind</item>
    </string-array>

    <string-array name="entries_snoozeSettings">
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>20 minutes</item>
        <item>30 minutes</item>
        <item>60 minutes</item>
    </string-array>

    <string-array name="entryvalues_snoozeSettings">
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>20 minutes</item>
        <item>30 minutes</item>
        <item>60 minutes</item>
    </string-array>

    <string-array name="entries_repeatSettings">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="entryvalues_repeatSettings">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <!-- Strings for patient spinner -->
    <string-array name="patient_array">
        <item>Brandon</item>
        <item>Chris</item>
        <item>Mason</item>
        <item>Other</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>



    <!-- Strings for Homepage -->
    
    
    <string name="upcoming_meds">Upcoming Medication To Take:</string>
    <string name="meds_btn">Medications</string>
    <string name="due_btn">Due Today</string>
    <string name="log_btn">Meds Log</string>
    <string name="notes_btn">Doctor Notes</string>


    <!-- Strings for AddPatient -->

    <string name="add_btn">Add Patient</string>



    <!-- Strings for AddMedication -->

    <string name="Med_title">Medication Name</string>
    <string name="Med_titleEDIT">Medication Name to Edit</string>
    <string name="Current_title">Current Remaining</string>
    <string name="Unit_title">Unit</string>
    <string name="Reason_title">Instructions for Taking</string>
    <string name="Doctor_title">Doctor</string>
    <string name="schedule_btn">Set Schedule</string>






    <string-array name="unit_items">
        <item>Capsules</item>
        <item>Cups</item>
        <item>Drops</item>
        <item>Grams</item>
        <item>Milligrams</item>
        <item>Injections</item>


    </string-array>



    <!-- Strings for Schedule -->

    <string name="interval_Title">Interval</string>
    <string name="dose_title">Schedule and Dose</string>
    <string name="start_title">Start Day</string>
    <string name="duration_title">Duration</string>
    <string name="alert_title">Alerts</string>
    <string name="save_btn">Save</string>





    <string-array name="interval_array">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>

    </string-array>


    <string-array name="duration_array">
        <item>1 Day</item>
        <item>2 Days</item>
        <item>3 Days</item>
        <item>1 Week</item>
        <item>2 Week</item>
        <item>3 Week</item>
        <item>1 Month</item>
        <item>2 Month</item>
        <item>3 Month</item>
        <item>1 Year</item>
        <item>2 Year</item>
        <item>3 Year</item>
        <item>Forever</item>

    </string-array>

    <string-array name="schedule">
        <item>Morning</item>
        <item>Noon</item>
        <item>Evening</item>
        <item>Bedtime</item>


    </string-array>






</resources>
