<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Creates Toolbar  -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/add_medicationToolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:background="@color/colorPolyPurple"
        android:fontFamily="@font/ubuntu_r"
        app:theme="@style/ToolbarStyle">
    </android.support.v7.widget.Toolbar>

    <!-- Layouts for content is here.  -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           >

            <TextView
                android:id="@+id/medicationTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/Med_title"
                android:fontFamily="@font/ubuntu_r"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:focusable="true"

                />


            <EditText
                android:id="@+id/medicationNameEditText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginEnd="10dp"
                android:layout_below="@+id/medicationTitleTextView"
                android:background="@color/colorSilver"
                android:ems="10"
                android:inputType="textPersonName"
                 />


            <TextView
                android:id="@+id/currentTitleTextView"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/Current_title"
                android:layout_below="@+id/medicationNameEditText"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/ubuntu_r"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"


                />

            <EditText
                android:id="@+id/currentEditText"
                android:layout_width="180dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:hint="30.0"
                android:layout_marginStart="10dp"
                android:layout_below="@+id/currentTitleTextView"
                android:background="@color/colorSilver"
                android:inputType="numberDecimal"
                android:textCursorDrawable="@color/colorPolyPurple"

                />




            <TextView
                android:id="@+id/unitTitleTextView"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/Unit_title"
                android:layout_below="@+id/medicationNameEditText"
                android:layout_toEndOf="@+id/currentTitleTextView"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/ubuntu_r"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"

                />


            <Spinner
                android:id="@+id/unitSpinner"
                android:layout_width="180dp"
                android:layout_height="45dp"
                android:layout_below="@+id/unitTitleTextView"
                android:layout_toEndOf="@+id/currentEditText"
                android:entries="@array/unit_items"
                android:spinnerMode="dialog"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                />



            <TextView
                android:id="@+id/reasonTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/currentEditText"
                android:layout_marginTop="10dp"
                android:text="@string/Reason_title"
                android:fontFamily="@font/ubuntu_r"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"

                />


            <EditText
                android:id="@+id/reasonNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:lines="5"
                android:minLines="2"
                android:maxLines="10"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_below="@+id/reasonTitleTextView"
                android:background="@color/colorSilver"
                android:ems="10"
                android:inputType="textPersonName|textMultiLine"
                />


            <TextView
                android:id="@+id/doctorTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/reasonNameEditText"
                android:layout_marginTop="10dp"
                android:text="@string/Doctor_title"
                android:fontFamily="@font/ubuntu_r"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"

                />


            <EditText
                android:id="@+id/doctorNameEditText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_below="@+id/doctorTitleTextView"
                android:background="@color/colorSilver"
                android:ems="10"
                android:inputType="textPersonName"
                />

            <Button
                android:id="@+id/scheduleBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/doctorNameEditText"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@color/colorPolyPurple"
                android:onClick="EditMedicationButton"
                android:text="@string/schedule_btn"
                android:textColor="@color/colorWhite" />



        </RelativeLayout>




    </ScrollView>



</LinearLayout>