<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Creates Toolbar  -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/scheduleToolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:background="@color/colorPolyPurple"
        android:fontFamily="@font/ubuntu_r"
        app:theme="@style/ToolbarStyle">
    </android.support.v7.widget.Toolbar>

    <!-- Layouts for content is here.  -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/intervalTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:focusable="true"
            android:paddingTop="10dp"
            android:fontFamily="@font/ubuntu_r"
            android:text="@string/interval_Title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:gravity="center_horizontal"

            />

        <Spinner
            android:id="@+id/intervalSpinner"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/intervalTitleTextView"
            android:entries="@array/interval_array"
            android:spinnerMode="dialog"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="@color/colorSilver"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/durationTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/intervalSpinner"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:focusable="true"
            android:paddingTop="10dp"
            android:fontFamily="@font/ubuntu_r"
            android:text="@string/duration_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:gravity="center_horizontal"

            />

        <Spinner
            android:id="@+id/durationSpinner"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/durationTitleTextView"
            android:entries="@array/duration_array"
            android:spinnerMode="dialog"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="@color/colorSilver"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/doseTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/durationSpinner"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:focusable="true"
            android:paddingTop="10dp"
            android:fontFamily="@font/ubuntu_r"
            android:text="@string/dose_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:gravity="center_horizontal"

            />


        <TextView
            android:id="@+id/startTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="45dp"

            android:layout_alignParentStart="true"
            android:layout_below="@+id/scheduleSpinner"
            android:layout_marginTop="11dp"
            android:focusable="true"
            android:fontFamily="@font/ubuntu_r"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:text="@string/start_title"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/startDate"
            android:layout_width="match_parent"
            android:layout_height="45dp"

            android:layout_below="@+id/startTitleTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:background="@color/colorSilver"
            android:clickable="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:fontFamily="@font/ubuntu_r"
            android:hint="Select Date"
            android:text="Date Picker"
            android:textAlignment="center" />



        <TextView
            android:id="@+id/alertTitleTextView"
            android:layout_width="180dp"
            android:layout_height="45dp"
            android:layout_below="@+id/startDate"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:focusable="true"
            android:paddingTop="10dp"
            android:fontFamily="@font/ubuntu_r"
            android:text="@string/alert_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:gravity="center_horizontal"

            />

        <Switch
            android:id="@+id/alertSwitch"
            android:layout_below="@+id/startDate"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:fontFamily="@font/ubuntu_r"
            android:layout_centerHorizontal="true"
            android:layout_width="180dp"
            android:layout_height="45dp"
            android:layout_toRightOf="@+id/alertTitleTextView"
            android:theme="@style/Switch"
            />

        <Button
            android:id="@+id/saveBTN"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@id/alertSwitch"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorPolyPurple"
            android:onClick="setSchedule"
            android:text="@string/save_btn"
            android:textColor="@color/colorWhite" />

        <Spinner
            android:id="@+id/scheduleSpinner"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/doseTitleTextView"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="@color/colorSilver"
            android:entries="@array/schedule"
            android:spinnerMode="dialog"
            android:textAlignment="center" />

    </RelativeLayout>



    </ScrollView>




    android:id="@+id/intervalSpinner"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:layout_below="@+id/intervalTitleTextView"
    android:entries="@array/interval_array"
    android:spinnerMode="dialog"
    android:layout_marginEnd="10dp"
    android:layout_marginStart="10dp"
    android:background="@color/colorSilver"
    android:textAlignment="center"







</LinearLayout>